--- a/src/mainPanel/columns/formPanel/formPanel.css
+++ b/src/mainPanel/columns/formPanel/formPanel.css
@@ -28,8 +28,8 @@
   padding: 0.43vh 0;
   text-align: center;
   border-radius: 0.72vh;
-  top: -5.3vh;
-  right: -5.3vh;
+  top: 1.7vh;
+  left: -9.5vw;
   opacity: 0.9;
   width: 17.26vh;
 }
@@ -42,10 +42,10 @@
 @keyframes formPanelItemDescAnim {
   from{
     opacity: 0;
-    top: -3.6vh;
+    left: -9vw;
   }
   to {
     opacity: 0.9;
-    top: -5.03vh;
+    left: -9.5vw;
   }
 }
