--- a/src/mainPanel/mainPanel.css
+++ b/src/mainPanel/mainPanel.css
@@ -6,6 +6,14 @@
   margin-top: 0.2vh;
 }
 
+.grid-4-cul {
+ grid-template-columns: 6fr 7fr 7fr 1fr;
+}
+
+.grid-2-cul {
+ grid-template-columns: 20fr 1fr;
+}
+
 .column {
   background: #ecf9fc;
   border-radius: 1vh;
@@ -21,6 +29,7 @@
   font-size: 3.4vh;
   height: 5.7vh;
   margin-right: 0.43vh;
+  text-align: center;
 }
 
 .column-body {
