--- a/src/mainPanel/columns/previewForm/previewForm.css
+++ b/src/mainPanel/columns/previewForm/previewForm.css
@@ -12,5 +12,21 @@
 
 #preview-form h4 {
   font-weight: 500;
-  font-size: 2.5vh;;  
+  font-size: 2.5vh;
+  margin-bottom: 1vh; 
+}
+
+#preview-form input[type="submit"] {
+  margin-top: 1.7vh;
+  padding: 0.9vh 1.1vh;
+}
+
+#no-item-in-form {
+  color: rgb(131, 23, 23);
+  border: 3px dashed rgb(139, 34, 34);
+  width: 50%;
+  padding: 2vh 3vw;
+  text-align: center;
+  background: rgb(238, 161, 161);
+  margin-left: 2vw;
 }
