--- a/src/mainPanel/columns/previewForm/previewForm.css
+++ b/src/mainPanel/columns/previewForm/previewForm.css
@@ -21,6 +21,27 @@
   padding: 0.9vh 1.1vh;
 }
 
+.preview-form-item {
+  margin-top: 1vh; 
+}
+
+.preview-form-item label {
+  display: block;
+  font-size: 2.3vh;
+}
+
+.preview-form-item input[type="text"],
+.preview-form-item input[type="password"],
+.preview-form-item input[type="number"],
+.preview-form-item input[type="date"] {
+  width: 50%;
+  height: 3vh;
+}
+
+.preview-form-item input[type="button"] {
+  height: 3vh;
+}
+
 #no-item-in-form {
   color: rgb(131, 23, 23);
   border: 3px dashed rgb(139, 34, 34);
