--- a/src/mainPanel/columns/previewForm/previewForm.css
+++ b/src/mainPanel/columns/previewForm/previewForm.css
@@ -35,7 +35,8 @@
 .preview-form-item input[type="number"],
 .preview-form-item input[type="date"] {
   width: 50%;
-  height: 3vh;
+  padding: 0.45rem;
+  border: 1px solid #ccc;
 }
 
 .preview-form-item input[type="button"] {
