--- a/src/mainPanel/columns/formCode/formCode.css
+++ b/src/mainPanel/columns/formCode/formCode.css
@@ -1,3 +1,25 @@
 #form-code {
-  border: 1px solid red;
+  text-align: center;
+}
+
+#final-code {
+  width: 45vw;
+  height: 45vh;
+  margin-top: 4vh;
+  border: 1px solid #999;
+  resize: none;
+  overflow-y: auto;
+  padding: 0.3rem;
+}
+
+#copy-code {
+  margin: 0 auto;
+  margin-top: 3vh;
+  width: 8vw;
+  height: 5vh;
+  display: block !important;
+}
+
+#copy-code:focus {
+  outline: none;
 }
