--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,20 @@ body {
   overflow: hidden;
 }
 
+#contact-me {
+  position: absolute;
+  bottom: 11vh;
+  left: -6vw;
+  width: 20vw;
+  height: 5vh;
+  background: #27aac7;
+  text-align: center;
+  padding-top: 0.8vh;
+  cursor: default;
+  transform: rotateZ(45deg);
+  z-index: 2;
+}
+
 colors {
   color: #d55347; /* pumpkin */
   color: #ffa577; /* canteloupe */
