--- a/src/index.css
+++ b/src/index.css
@@ -11,18 +11,23 @@ body {
   overflow: hidden;
 }
 
-#contact-me {
+#contact-me-flag {
   position: absolute;
-  bottom: 11vh;
-  left: -6vw;
+  bottom: 10.2vh;
+  left: -7vw;
   width: 20vw;
   height: 5vh;
   background: #27aac7;
   text-align: center;
   padding-top: 0.8vh;
-  cursor: default;
-  transform: rotateZ(45deg);
+  transform: rotateZ(60deg);
   z-index: 2;
+  font-size: 2.3vh;
+}
+
+#contact-me-flag:hover {
+  background: #54e0ff;
+  cursor: pointer;
 }
 
 colors {
