--- a/src/mainPanel/columns/editItem/editItem.css
+++ b/src/mainPanel/columns/editItem/editItem.css
@@ -1,6 +1,38 @@
 #edit-item-body {
   position: relative;
   font-size: 2.3vh;
+  margin-bottom: 10vh;
+}
+
+.set-btn-panel {
+  width: 100%;
+}
+
+.set-btn-panel div {
+  width: 45%;
+  display: inline-block;
+  margin: 0.5vh;
+  margin-bottom: 0.2vh;
+  text-align: center;
+}
+
+.set-btn-panel .btn {
+  width: 100%;
+  margin-bottom: 0;
+}
+
+.set-btn-panel .line {
+  width: 50%;
+  height: .7vh;
+  display: inline-block;
+  background: rgb(58, 146, 180);
+  margin-bottom: 2vh;
+  border-radius: 100vh;
+}
+
+.edit-set {
+  max-height: 60vh;
+  overflow-y: auto;
 }
 
 .edit-item-row-g {
@@ -32,7 +64,9 @@
 }
 
 #edit-end {
-  float: right;
+  position: absolute;
+  bottom: 1vh;
+  right: 1vw;
 }
 
 #edit-end-btn {
@@ -55,7 +89,8 @@
 }
 
 #edit-reset {
-  float: right;
+  position: absolute;
+  bottom: 1vh;
 }
 
 #edit-reset-btn {
